[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "queuestorm-investigator"
version = "0.1.0"
description = "QueueStorm Investigator backend API: deterministic digital-finance complaint investigator."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.14,<3.15"
authors = [{ name = "QueueStorm Team" }]
dependencies = [
    # Populated as development progresses.
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.5",
    "mypy>=1.10",
    "pip-audit>=2.7",
    "pre-commit>=3.7",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

# ---------- ruff ----------
[tool.ruff]
line-length = 100
target-version = "py314"
extend-exclude = [".venv", "temp"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # bugbear
    "UP",  # pyupgrade
    "SIM", # simplify
    "RUF", # ruff-specific
]
ignore = [
    "E501", # line length (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]  # asserts are fine in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------- mypy ----------
[tool.mypy]
python_version = "3.14"
strict = true
warn_unreachable = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# ---------- pytest ----------
[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q --strict-markers --strict-config"
testpaths = ["tests"]
asyncio_mode = "auto"
